# MCP_StockAssistant

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  dev.sh  docker-compose.yml  langgraph.json  langgraph.yaml  package-lock.json  package.json  pyproject.toml  start.sh  test_advisor.py  test_alpaca.py  turbo.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
apps/api/: __init__.py  config.py
apps/api/agents/: content_utils.py
apps/api/db/: broker_repo.py  database.py  init.sql  migrations.py  portfolio_repo.py  report_prompt_repo.py  report_repo.py  report_thread_repo.py
apps/api/gateway/: main.py  stream.py
apps/api/memory/: vector_store.py
apps/api/models/: schemas.py
apps/api/services/: alpaca_client.py  cache.py  finviz_client.py  fred_client.py  market_data_provider.py  mlflow_tracker.py  reddit_client.py  report_engine.py  report_orchestrator.py  report_prompts.py  report_synthesizer.py  report_templates.py  schwab_client.py  tavily_client.py  technical_analysis.py  tool_contracts.py  trade_controls.py
apps/api/tests/: test_market_data_provider.py  test_report_engine_helpers.py  test_report_followup_api.py  test_report_orchestrator.py  test_report_synthesizer.py  (+4 more)
apps/web/: next.config.ts  package.json
backend/: equity_logs.txt  requirements.txt  run_advisor_agent.py  run_equity_agent.py  run_simple_advisor.py  run_stock_agent.py  setup_schwab_auth.py  simple_advisor_test.py  start_all_agents.py  stock_logs.txt  test_reddit.py
backend/app/: main.py
docs/: ARCHITECTURE.md  OPERATIONS.md  README.md  SCHWAB_API_REFERENCE.md  V2_AGENT_ARCHITECTURE_PLAN.md
docs/archive/: CACHE_GUIDE.md  MEMORY_GUIDE.md  PHASE_3.3_COMPLETE.md  PLAN.md  PROGRESS_REPORT.md  QUICK_START.md
frontend/: README.md  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
scripts/: advanced_edge_case_testing.py  comprehensive_test_v4.py  debug_qdrant.py  debug_qdrant_sig.py  generate_schwab_reference.py  run_all_report_tests.py  stress_test_orchestrator.py  test_advisor.py  test_cache.py  test_memory.py  test_portfolio.py
skills/agent_best_practices/: SKILL.md
skills/token_efficiency/: SKILL.md
(+76 files in other folders)
