[project]
name = "ai-stock-assistant"
version = "0.1.0"
description = "AI stock assistant that answers finance questions using Claude, Schwab API, and news scraping"
authors = [
    {name = "Advait Darbare",email = "advait.darbare9@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "claude-code (>=0.0.1,<0.0.2)",
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pyfinviz (>=1.2,<2.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
claude-code = "^0.0.1"

